--- a/DateApp/appsettings.json
+++ b/DateApp/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "Issuer": "https://localhost:7138",
+    "Audience": "https://localhost:7138",
+    "SigningKey": "DateApp_hsjdgfbvhjdf/618751456484246/hssjdhbcjs_SecretKey_ewtrtdghbdgfcbjdutgf13548532548258945616"
+  }
 }
