Email doğrulama eklendi.

--- a/DateApp/appsettings.json
+++ b/DateApp/appsettings.json
@@ -13,5 +13,13 @@
     "Issuer": "https://localhost:7138",
     "Audience": "https://localhost:7138",
     "SigningKey": "DateApp_hsjdgfbvhjdf/618751456484246/hssjdhbcjs_SecretKey_ewtrtdghbdgfcbjdutgf13548532548258945616"
+  },
+  "SmtpSettings": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "EnableSsl": true,
+    "Username": "dateapp.bitirme@gmail.com",
+    "Password": "pphk opis bvfl gqkt"
   }
+
 }
