--- a/DateApp/appsettings.json
+++ b/DateApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DateAppConnection": "Data Source=DESKTOP-UKUAJ3A;Initial Catalog=DateApp;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DateAppConnection": "Data Source=HUAWEI-D15;Initial Catalog=DateApp;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
