--- a/DateApp/Properties/launchSettings.json
+++ b/DateApp/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:7138",
+      "applicationUrl": "https://localhost:7138",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
