--- a/DateApp/Properties/launchSettings.json
+++ b/DateApp/Properties/launchSettings.json
@@ -9,12 +9,12 @@
     }
   },
   "profiles": {
-    "https": {
+    "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7138",
+      "applicationUrl": "http://localhost:7138",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
